# wwswitch

./: CMakeLists.txt  main.cpp  mklittlefs.sh
wwswitch/: debounced_button.cpp  debounced_button.h  webserver.cpp  webserver.h  wwswitch.ino  wwswitchstatistics.cpp  wwswitchstatistics.h
wwswitch/data/: index.html  index.js
